--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
 .App {
   text-align: center;
 }
+div {
+  box-sizing: border-box;
+}
+.list {
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid grey;
+}
+.black-nav {
+  display: flax;
+  background: black;
+  width: 100%;
+  color: white;
+  padding-left: 20px;
+}
 
 .App-logo {
   height: 40vmin;
